--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,17 @@
   "version": "1.0",
   "description": "現在のページの書誌情報をCitation.jsで取得し、JabRefに送信します。",
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "nativeMessaging"
   ],
   "host_permissions": [
     "<all_urls>"
   ],
   "action": {
     "default_popup": "popup.html"
+  },
+  "background": {
+    "service_worker": "background.js"
   },
   "content_scripts": [
     {
